--- a/grimorio/src/Comp/CSS/Header.css
+++ b/grimorio/src/Comp/CSS/Header.css
@@ -1,6 +1,6 @@
 .header-antiguo{
     background-color: #f8c771;
-    background-image: url("fondoH.jpg");
+    background-image: url("../IMG/fondoH.jpg");
     padding: 20px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
