Se agregaron animaciones
Se modificaron los css para darle un esitlo al texto que lo desvanece usando la opacidad, ademas de usar las funciones Math para extraer valores random de la api

--- a/grimorio/src/Comp/CSS/Articulos.css
+++ b/grimorio/src/Comp/CSS/Articulos.css
@@ -1,3 +1,19 @@
 .Arti{
     margin-top: 10%;
 }
+.hidden {
+    opacity: 0;
+  }
+  
+  .fade-out {
+    animation: fadeOut 3s;
+  }
+  
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
